# cognitive-memory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: algorithms.md  architecture.md  configuration.md  deployment.md  integrations.md
examples/: README.md  basic_usage.py
src/cognitive_memory/: __init__.py
src/cognitive_memory/api/: __init__.py  app.py  models.py
src/cognitive_memory/api/routes/: __init__.py  health.py  memories.py
src/cognitive_memory/core/: __init__.py  config.py  memory.py
src/cognitive_memory/engines/: __init__.py  consolidation.py  decay.py  importance.py  retrieval.py  working_memory.py
src/cognitive_memory/storage/: __init__.py
src/cognitive_memory/storage/cache/: __init__.py  base.py  redis.py
src/cognitive_memory/storage/metadata/: __init__.py  base.py  postgres.py  sqlite.py
src/cognitive_memory/storage/vector/: __init__.py  base.py  pgvector.py  qdrant.py
tests/: __init__.py
tests/property/: test_decay_properties.py  test_importance_properties.py
tests/unit/: test_api.py  test_config.py  test_consolidation.py  test_decay.py  test_importance.py  test_memory.py  test_pgvector.py  test_postgres_metadata.py  test_qdrant.py  test_redis_cache.py  test_retrieval.py  test_sqlite.py  test_version.py  test_working_memory.py
