[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive-memory"
version = "0.1.0"
description = "Memory that forgets, like humans do. A production-grade memory system for AI agents with intelligent forgetting."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Soham Dutta", email = "soham.dutta.devops@gmail.com" },
]
keywords = [
    "ai",
    "agents",
    "memory",
    "llm",
    "langgraph",
    "langchain",
    "cognitive",
    "forgetting",
    "decay",
    "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
qdrant = [
    "qdrant-client>=1.7.0",
]
pinecone = [
    "pinecone-client>=3.0.0",
]
pgvector = [
    "pgvector>=0.2.0",
    "psycopg[binary]>=3.1.0",
]
sqlite = [
    "aiosqlite>=0.19.0",
]
neo4j = [
    "neo4j>=5.0.0",
]
redis = [
    "redis>=5.0.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=1.0.0",
]
langchain = [
    "langchain-core>=0.2.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]
all = [
    "cognitive-memory[qdrant,neo4j,redis,sqlite,langgraph,langchain,api]",
]
dev = [
    "cognitive-memory[all]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/NP-compete/cognitive-memory"
Documentation = "https://github.com/NP-compete/cognitive-memory#readme"
Repository = "https://github.com/NP-compete/cognitive-memory"
Issues = "https://github.com/NP-compete/cognitive-memory/issues"
Changelog = "https://github.com/NP-compete/cognitive-memory/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cognitive_memory"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["cognitive_memory"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "neo4j.*",
    "pinecone.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require external services)",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src/cognitive_memory"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 0  # TODO: Increase to 80 once core modules are implemented
show_missing = true
